--- a/app/src/main/res/layout/activity_course_list.xml
+++ b/app/src/main/res/layout/activity_course_list.xml
@@ -80,7 +80,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         app:srcCompat="@drawable/ic_baseline_add_24"
-        android:onClick="goToAssessmentList"
+        android:onClick="goToCoursDetailList"
         android:layout_margin="20dp"
 
         app:layout_constraintBottom_toBottomOf="parent"
