--- a/app/src/main/res/layout/activity_course_list.xml
+++ b/app/src/main/res/layout/activity_course_list.xml
@@ -10,7 +10,8 @@
         android:layout_width="409dp"
         android:layout_height="200dp"
         tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+        tools:layout_editor_absoluteY="1dp"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,15 +24,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hello World!!1"></TextView>
-                <TextView
+                    android:text="Term : "></TextView>
+                <EditText
+                    android:id="@+id/editTermName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hello World!!2"></TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Hello World!!3"></TextView>
+                    android:hint="Term Name"></EditText>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -40,15 +38,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hello World!!4"></TextView>
-                <TextView
+                    android:text="Start Date : "></TextView>
+                <EditText
+                    android:id ="@+id/editTermStartDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hello World!!5"></TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Hello World!!6"></TextView>
+                    android:hint="MM/DD/YYYY"></EditText>
+
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -57,18 +53,21 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hello World!!7"></TextView>
-                <TextView
+                    android:text="End Date"></TextView>
+                <EditText
+                    android:id="@+id/editTermEndDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hello World!!8"></TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Hello World!!9"></TextView>
+                    android:hint="MM/DD/YYYY"></EditText>
+
             </LinearLayout>
 
-
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                android:clickable="true"
+                android:onClick="saveButton"></Button>
         </LinearLayout>
 
 
